[gd_scene load_steps=2 format=3 uid="uid://qp6o3drk3irc"]

[ext_resource type="Script" path="res://scenes/ui/skill_bar/skill_bar.gd" id="1_jatdr"]

[node name="SkillBar" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 64)
script = ExtResource("1_jatdr")

[node name="SkillButton0" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Empty"

[node name="TimeoutLabel" type="Label" parent="SkillButton0"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
text = "00:00"

[node name="SkillButton1" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Empty"

[node name="TimeoutLabel" type="Label" parent="SkillButton1"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
text = "00:00"

[node name="SkillButton2" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Empty"

[node name="TimeoutLabel" type="Label" parent="SkillButton2"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
text = "00:00"

[node name="SkillButton3" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Empty"

[node name="TimeoutLabel" type="Label" parent="SkillButton3"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
text = "00:00"
